# parse-arena

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: gen_demo_chart.py  gen_pdf_fixture.py  smoke.sh
src/parse_arena/: __init__.py  cli.py  manifest.py  report.py  router.py  runner.py  serve.py
src/parse_arena/adapters/: __init__.py  base.py  heavy.py  html_stdlib.py  mock.py  plaintext.py  pypdf_adapter.py
src/parse_arena/fixtures/: manifest.yaml
src/parse_arena/fixtures/docs/: en_article.txt  en_form_application.html  en_report.html  en_schedule.html  ja_receipt_conbini.html  ja_receipt_izakaya.txt  ja_vertical_essay.html  ja_vertical_poem.html
src/parse_arena/fixtures/ground_truth/: en_article.json  en_form_application.json  en_invoice.json  en_pricing.json  en_report.json  en_schedule.json  en_tickets.json  ja_receipt_conbini.json  ja_receipt_izakaya.json  ja_vertical_essay.json  ja_vertical_poem.json
src/parse_arena/metrics/: __init__.py  fields.py  order.py  table.py  text.py
tests/: test_adapters.py  test_cli.py  test_manifest.py  test_metrics_order.py  test_metrics_table.py  test_metrics_text.py  test_report_router.py  test_runner.py
